fixed html still stuck with page on 304

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,6 @@
     margin: auto;
     background-color: #2A2C2F;
     align-items: center;
-    width: 110%;
+    width: 100%;
     padding: 0;
 }
