--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -17,6 +17,7 @@
 @media screen and (max-width: 670px) {
     .place__image {
         width: 100%;
+        max-height: 320px;
         margin-bottom: 24px;
     }
 }
